# opencv_practice

./: README.md  blackwhite.py
cpp/: CMakeLists.txt
cpp/src/camera/: camera.cpp
cpp/src/filter/: filter1.cpp  filter2.cpp  filter3.cpp  filter4.cpp  filter5.cpp
cpp/src/image/: image1.cpp  image2.cpp  image3.cpp  image4.cpp  image5.cpp  image6.cpp
robot/: blue_ball_track.py  camera.py  canny.py  grid_detection.py  harris.py  lk.py  medianflow.py  shi-tomasi.py  template_matching.py  trace.py  track.py
